--- a/package.yaml
+++ b/package.yaml
@@ -1,48 +1,20 @@
 name:                gradle-loop
 version:             0.1.0.0
-github:              "githubuser/gradle-loop"
+github:              "davecturner/gradle-loop"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "David Turner"
+maintainer:          "dave.c.turner@gmail.com"
+copyright:           "2018 David Turner"
 
-extra-source-files:
-- README.md
-- ChangeLog.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/gradle-loop#readme>
+description:         Please see the README on GitHub at <https://github.com/davecturner/gradle-loop#readme>
 
 dependencies:
 - base >= 4.7 && < 5
 
-library:
-  source-dirs: src
-
 executables:
-  gradle-loop-exe:
+  gradle-loop:
     main:                Main.hs
-    source-dirs:         app
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    dependencies:
-    - gradle-loop
-
-tests:
-  gradle-loop-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - gradle-loop
